--- a/.github/workflows/automatically-add-labels-to-new-issues.yml
+++ b/.github/workflows/automatically-add-labels-to-new-issues.yml
@@ -11,5 +11,5 @@ jobs:
       - name: initial labeling
         uses: andymckay/labeler@master
         with:
-          add-labels: "Application Phase, Initial Review in Progress"
+          add-labels: "Grant Status: (a) Application On Deck" # Replaced labels "Application Phase, Initial Review in Progress"
           repo-token: "${{ secrets.GH_TOKEN }}"
