--- a/.github/workflows/move-labeled-issue-to-column.yml
+++ b/.github/workflows/move-labeled-issue-to-column.yml
@@ -9,5 +9,5 @@ jobs:
       with:
         action-token: "${{ secrets.GH_TOKEN }}"
         project-url: "https://github.com/stacksgov/Stacks-Project-Launchpad/projects/3"
-        column-name: "Application Phase"
-        label-name: "Initial Review in Progress"
+        column-name: "Application in Review"
+        label-name: "Grant Status: (b) Application in Review"
