--- a/.github/workflows/issues-change-columns.yml
+++ b/.github/workflows/issues-change-columns.yml
@@ -7,17 +7,17 @@ jobs:
   label:
     runs-on: ubuntu-latest
     steps:
-      - name: "Onboarding Phase"
+      - name: "Grantee Onboarding"
         uses: andymckay/labeler@master
         if: "${{ github.event.project_card.column_id == '19095931' }}"
         with:
-          add-labels: 'Onboarding Phase, Onboarding in Progress'
-          remove-labels: 'Application Phase, Initial Review in Progress, Review in Progress, Revisions in Progress,'
+          add-labels: 'Grant Status: (c) Grantee Onboarding'
+          remove-labels: 'Grant Status: (a) Application On Deck, Grant Status: (b) Application in Review'
           repo-token: "${{ secrets.GH_TOKEN }}"
-      - name: "Milestone Phase"
-        uses: andymckay/labeler@master
-        if: "${{ github.event.project_card.column_id == '19095936' }}"
-        with:
-          add-labels: 'Milestone in Progress, Milestone 1'
-          remove-labels: 'Onboarding Phase, Application Phase, Initial Review in Progress, Review in Progress, Revisions in Progress, Onboarding in Progress'
-          repo-token: "${{ secrets.GH_TOKEN }}"
+#      - name: "Completing Final Deliverable"
+#        uses: andymckay/labeler@master
+#        if: "${{ github.event.project_card.column_id == '19095936' }}"
+#        with:
+#          add-labels: 'Milestone in Progress, Milestone 1'
+#          remove-labels: 'Onboarding Phase, Application Phase, Initial Review in Progress, Review in Progress, Revisions in Progress, Onboarding in Progress'
+#          repo-token: "${{ secrets.GH_TOKEN }}"
