dates on github actions

--- a/.github/workflows/automatically-add-labels-to-new-issues.yml
+++ b/.github/workflows/automatically-add-labels-to-new-issues.yml
@@ -8,6 +8,7 @@ jobs:
   automate-issues-labels:
     runs-on: ubuntu-latest
     steps:
+#      New grants get labeled with "Grant Status: (a) Application On Deck"
       - name: Set initial labeling
         uses: andymckay/labeler@master
         with:
@@ -19,18 +20,18 @@ jobs:
         id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
 
-#      From 9/12 until 11/7 set cohort 19-20
+#      From 9/12 until 11/7 set label cohort 19-20
       - name: Set Cohort labeling
         uses: andymckay/labeler@master
-        if: ${{ steps.date.outputs.date }} >= "2022-09-12"
+        if: ${{ (steps.date.outputs.date >= "2022-09-12") && (steps.date.outputs.date < "2022-11-07") }} 
         with:
           add-labels: "Grant Cohort: 19-20"
           repo-token: "${{ secrets.GH_TOKEN }}"
 
-#     From 11/7 until 1/6 set cohort 21
+#     From 11/7 until 1/6 set label cohort 21
       - name: Set Cohort labeling
         uses: andymckay/labeler@master
-        if: ${{ steps.date.outputs.date }} >= "2022-11-07" 
+        if: ${{ (steps.date.outputs.date >= "2022-11-07") && (steps.date.outputs.date < "2023-01-06") }}
         with:
           add-labels: "Grant Cohort: 21"
           repo-token: "${{ secrets.GH_TOKEN }}"
