--- a/.github/workflows/issues-change-columns.yml
+++ b/.github/workflows/issues-change-columns.yml
@@ -14,10 +14,10 @@ jobs:
           add-labels: 'Grant Status: (c) Grantee Onboarding'
           remove-labels: 'Grant Status: (a) Application On Deck, Grant Status: (b) Application in Review'
           repo-token: "${{ secrets.GH_TOKEN }}"
-#      - name: "Completing Final Deliverable"
-#        uses: andymckay/labeler@master
-#        if: "${{ github.event.project_card.column_id == '19095936' }}"
-#        with:
-#          add-labels: 'Milestone in Progress, Milestone 1'
-#          remove-labels: 'Onboarding Phase, Application Phase, Initial Review in Progress, Review in Progress, Revisions in Progress, Onboarding in Progress'
-#          repo-token: "${{ secrets.GH_TOKEN }}"
+      - name: "Completing Final Deliverable"
+        uses: andymckay/labeler@master
+        if: "${{ github.event.project_card.column_id == '19095936' }}"
+        with:
+          add-labels: 'Grant Status: (d) Completing Initial Deliverable'
+          remove-labels: 'Grant Status: (a) Application On Deck, Grant Status: (b) Application in Review, Grant Status: (c) Grantee Onboarding'
+          repo-token: "${{ secrets.GH_TOKEN }}"
