--- a/.github/workflows/automatically-add-labels-to-new-issues.yml
+++ b/.github/workflows/automatically-add-labels-to-new-issues.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   automate-issues-labels:
+    if: ${{ false }}
     runs-on: ubuntu-latest
     steps:
 #      New grants get labeled with "Grant Status: (a) Application On Deck"
