--- a/.github/workflows/move-labeled-issue-to-column.yml
+++ b/.github/workflows/move-labeled-issue-to-column.yml
@@ -3,6 +3,7 @@ on:
     types: [labeled]
 jobs:
   Move_Labeled_Issue_On_Project_Board:
+    if: ${{ false }}
     runs-on: ubuntu-latest
     steps:
     - uses: konradpabjan/move-labeled-or-milestoned-issue@v2.0
